[package]
name = "murph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.12", features = [ "derive" ]}
eyre = "0.6.8"
hex = "0.4.3"
lazy_static = "1.4.0"

[[test]]
name = "parser"
path = "src/tests/parser.rs"

[[test]]
name = "e2e"
path = "src/tests/e2e.rs"